feat: adicionando CASL para criar um controle de autenticação

--- a/config/eslint-config/package.json
+++ b/config/eslint-config/package.json
@@ -16,7 +16,9 @@
   "prettier": "@saas/prettier",
   "eslintConfig": {
     "extends": [
-      "./base.js"
+      "./base.js",
+      "./node.js",
+      "./next.js"
     ]
   }
 }
