--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -6,11 +6,14 @@
   "types": "src/index.ts",
   "devDependencies": {
     "@saas/eslint-config": "workspace:*",
-    "@saas/tsconfig": "workspace:*",
-    "@saas/prettier": "workspace:*"
+    "@saas/prettier": "workspace:*",
+    "@saas/tsconfig": "workspace:*"
   },
   "eslintConfig": {
     "extends": "@saas/eslint-config/base"
   },
-  "prettier": "@saas/prettier-config"
+  "prettier": "@saas/prettier",
+  "dependencies": {
+    "@casl/ability": "^6.8.0"
+  }
 }
