--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -3,17 +3,22 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "tsx watch src/index.ts"
+    "dev": "tsx watch src/http/server.ts"
   },
   "dependencies": {
-    "@saas/auth": "workspace:*"
+    "@fastify/cors": "^11.2.0",
+    "@saas/auth": "workspace:*",
+    "fastify": "^5.7.4",
+    "fastify-type-provider-zod": "^6.1.0",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
-    "@types/node": "^25.2.0",
-    "tsx": "^4.21.0",
     "@saas/eslint-config": "workspace:*",
     "@saas/prettier": "workspace:*",
-    "@saas/tsconfig": "workspace:*"
+    "@saas/tsconfig": "workspace:*",
+    "@types/node": "^25.2.0",
+    "prisma": "^7.3.0",
+    "tsx": "^4.21.0"
   },
   "eslintConfig": {
     "extends": "@saas/eslint-config/node"
