feat: criando migration das tabelas do banco

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,16 @@
 services:
-  pg:
-    image: bitnami/postgresql:latest
+  db:
+    image: postgres:16
+    container_name: next-saas
+    restart: always
+    environment:
+      POSTGRES_USER: myuser
+      POSTGRES_PASSWORD: mypassword
+      POSTGRES_DB: mydatabase
     ports:
       - "5432:5432"
-    environment:
-      - POSTGRES_USER=docker
-      - POSTGRES_PASSWORD=docker
-      - POSTGRES_DB=next-saas
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+
+volumes:
+  postgres_data:
